# sqleibniz

./: Cargo.toml  README.md  leibniz.lua
example/: stmt.sql
proc/: Cargo.toml
proc/src/: lib.rs
src/: error.rs  lev.rs  main.rs
src/highlight/: mod.rs
src/lexer/: mod.rs  tests.rs
src/lsp/: mod.rs
src/lsp/handlers/: hover.rs
src/parser/: debug.rs  mod.rs  nodes.rs  tests.rs
src/types/: keyword.rs  mod.rs  rules.rs  storage.rs
